# slam_book_excercise

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  readme.md
src/: CMakeLists.txt  DrawTrajectory.cpp  DrawTrajectory.h  PangoApp.cpp  eigenMatrix.cpp  eigenMatrix.h  hello.cpp  hello.h
src/plot_trajectory/: CMakeLists.txt  DrawTrajectory.h  PangoApp.cpp
src/trajectory_error/: CMakeLists.txt  trajectory_error.cpp
src/utils/: CMakeLists.txt  DrawTrajectory.cpp  DrawTrajectory.h
test/: CMakeLists.txt  test_eigen.cpp  test_eigen_matrix.cpp  test_lie_group_and_lie_algebra.cpp  test_main.cpp
